# engine

./: .gitmodules  CMakeLists.txt  GameWindow.cpp  README.md  RmlUiWindow.h  main.cpp  readme.MD
.github/workflows/: cmake.yml
Backends/: RmlUi_Backend.h  RmlUi_Backend_SDL_SDLrenderer.cpp
Graphics/: ResourceLoader.cpp  ResourceLoader.h
Logic/: Entity.cpp  Entity.h  Galaxy.cpp  Galaxy.h  GameObject.cpp  GameObject.h  PlanetComponent.h  PlanetSystem.cpp  PlanetSystem.h  PositionComponent.h  RenderComponent.h  RenderSystem.cpp  RenderSystem.h  ShipComponent.h  ShipSystem.cpp  ShipSystem.h
Logic/Components/: Galaxy.h  Position.h  Ship.h  Star.h
assets/: .gitignore
system/: GameObject.cpp  GameObject.h  GameWindow.cpp  GameWindow.h  RmlUiWindow.cpp  RmlUiWindow.h
